--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,24 +8,26 @@ authors = [
 readme = "README.md"
 dependencies = [
     "pose-format>=0.3.2",
-    "opencv-python",
     "tqdm",
     "vector-quantize-pytorch",
     "pytorch-lightning",
-    "wandb",
-    # to support wandb video logging
-    "moviepy",
-    "imageio",
     # used to normalize the data
     "mediapipe",
-    # to support a huggingface dataset, not recommended
-    "datasets",
+    # for inference using a huggingface hosted model
+    "huggingface-hub",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest",
-    "pylint"
+    "pylint",
+    "opencv-python",
+    "wandb",
+    # to support wandb video logging
+    "moviepy",
+    "imageio",
+    # to support a huggingface dataset, not recommended
+    "datasets",
 ]
 
 [tool.yapf]
@@ -47,7 +49,8 @@ generated-members = ["torch.*", "numpy.*", "cv2.*"]
 
 [tool.setuptools]
 packages = [
-    "sign_vq"
+    "sign_vq",
+    "sign_vq.data",
 ]
 
 [tool.pytest.ini_options]
